--- a/style.scss
+++ b/style.scss
@@ -289,3 +289,21 @@
 .add-tocart-button button:hover{
     background-color: rgb(0, 124, 0);
 }
+.product-name{
+    height: max-content;
+}
+.product-name h4{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.stok-status p{
+    color:green;
+    font-size: .9rem;
+}
+.old-price{
+    text-decoration: line-through;
+    color: #00000073;
+}
