--- a/style.scss
+++ b/style.scss
@@ -238,7 +238,7 @@
 .sc-icons {
     background-color: rgb(255, 255, 255);
     color: #fff;
-    padding: 4px 12px;
+    padding: 5px 10px;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -281,6 +281,9 @@
     &:hover{
         border: 2px solid rgba(10, 117, 0, 0.986);
     }
+}
+.stars svg{
+    fill: #a7a7a7;
 }
 .add-tocart-button button{
     background-color: rgb(0, 170, 0);
