--- a/style.scss
+++ b/style.scss
@@ -277,7 +277,7 @@
     transition: all .2s ease-in-out;
 }
 .product{
-    border: 1px solid rgba(0, 0, 0, 0.164);
+    border: 2px solid rgba(0, 0, 0, 0.164);
     &:hover{
         border: 2px solid rgba(10, 117, 0, 0.986);
     }
@@ -378,9 +378,21 @@
         color: #fff;
     }
 }
-.vew-cart-notification{
+
+.view-cart-noti-card{
+    width: 100%; 
+    height: 65px;
+    border-radius: 25px; 
+    border: 1px solid green;
+    background-color: #fff;
+    transform-origin: right;
     transform: scale(0);
-    transition: .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    padding: 0 20px;
 }
 @media screen and (max-width:768px) {
     #cart_tab{
